--- a/src/app/validation-form/validation-form.component.scss
+++ b/src/app/validation-form/validation-form.component.scss
@@ -62,8 +62,8 @@ p {
   }
 }
 
-.bg-light {
-  background-color: #f8f9fa !important;
+.background-light {
+  background-color: #f8f9fa;
 }
 
 .paragraph {
@@ -72,10 +72,10 @@ p {
 }
 
 .footer {
-  color: #6c757d !important;
-  padding-top: 3rem !important;
-  margin-bottom: 3rem !important;
-  margin-top: 3rem !important;
+  color: #6c757d;
+  padding-top: 3rem;
+  margin-bottom: 3rem;
+  margin-top: 3rem;
 }
 
 .text-center {
@@ -88,7 +88,7 @@ p {
 }
 
 .mb-1 {
-  margin-bottom: 1rem !important;
+  margin-bottom: 1rem;
 }
 
 .form-control {
